# RISC_V-Arch-project-

./: .gitignore  CMakeLists.txt  assemblerwindow.cpp  assemblerwindow.h  coarch3.pro  comm.h  common.h  cpu.cpp  cpu.h  encoder.cpp  encoder.h  input.s  instruction.cpp  instruction.h  main.cpp  memory.cpp  memory.h  parser.cpp  parser.h  pseudo.cpp  pseudo.h  register_file.cpp  register_file.h  simulatorwindow.cpp  symbol_table.cpp  symbol_table.h
src/: coarch3.pro.user.0405bff  cpu.cpp  cpu.h  encoder.cpp  instruction.cpp  instruction.h  main.cpp  pseudo.cpp  register_file.cpp  simulatorwindow.h
video/: explain_project
